# freeagentPY

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint_test.yaml  pages.yaml  publish.yaml
docs/source/: conf.py  freeagent.bank.rst  freeagent.category.rst  freeagent.payload.rst  freeagent.transaction.rst  index.rst
src/freeagent/: __init__.py  bank.py  base.py  category.py  client.py  payload.py  transaction.py
tests/: test_bank.py  test_category.py  test_transaction.py
